--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,12 @@ jobs:
     steps:
       - checkout
 
+      - run:
+          name: checkout submodule
+          command: |
+            git submodule init
+            git submodule update
+
       # Download and cache dependencies
       - restore_cache:
           keys:
