--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: langs/zh_TW.py
-    translation: '%locale_with_underscore%.py'
+    translation: /lang/%locale_with_underscore%.py
